2008-12-12  Karl Berry  <karl@gnu.org>

	* doc/grep.texi (Exit Status, grep Programs): move these
	nodes to under Invoking.

	* doc/grep.texi: remove all remaining node pointers;
	downcase cindex entries.

2008-12-11  Karl Berry  <karl@gnu.org>

	* doc/grep.texi (Copying): update url's.
	(GNU General Public License): remove node.
	(GNU Free Documentation License): @include fdl.texi instead.
	(@copying): update to v1.3 or later.
	* doc/fdl.texi: new file, copied from
	http://www.gnu.org/licenses/fdl.texi.
	* doc/Makefile.am (grep_TEXINFOS): new variable to get fdl.texi.
	Also add usual GPL license statement.

	* doc/grep.texi (Index): Merge in Concept Index node,
	to have only one index.  Arrange @syncodeindex's accordingly.

2008-12-10  Karl Berry  <karl@gnu.org>

	* doc/grep.texi (@copying): use @copying; move @contents to
	  beginning; rearrange other frontmatter in the conventional ways.

2008-06-15  Tony Abou-Assaleh <taa@acm.org>

	* src/ansi2knr.[1c]: Remove generated files (installed by
	  automake). Thanks to Emanuele Giaquinta for this.

2008-02-14  Tony Abou-Assaleh <taa@acm.org>

	* src/grep.c: Factor out copyright year in --version. Thanks to
	  Karl Berry for this.
	* src/grep.c: Update copyright years

	* po/POTFILES.in: +src/system.h +lib/closeout.c +lib/regex.c
	  +lib/xmalloc.c -lib/getopt1.c

2008-02-09  Tony Abou-Assaleh <taa@acm.org>

	* src/dfa.c: Replace a MALLOC and for loop with a CALLOC.  Thanks to
	  Johan Walles for this. Patch #6288

	* README-alpha: more info about CVS code
	* README: pointer to README-alpha

	* src/grep.c: Update grep copyright year

2008-02-08  Reuben Thomas <rrt@sc3d.org> (tiny change)

	* .cvsignore: add configure.ac
	* src/.cvsignore: add .deps

2008-02-06  Tony Abou-Assaleh <taa@acm.org>

	* tests/foad1.sh: Comment out cases that are known to fail. These
      should be uncommented after the 2.5.4 release.
	* tests/yesno.sh: Likewise.
	* doc/grep.1: Update description of -e PATTERN; from Benno Schulenberg